2005-12-31  Per Bothner  <per@bothner.com>

	* Quote.java: Un-tab-ify conditional code.
	* SyntaxTemplate.java: Likewise.

2005-12-30  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run): Fix bug which prevented getOutputConsumer
	from being run for a repl, thus giving incorrect output.

	* kawa/standard/require.java (featureMap): Add "srfi-10" as an alias.
	* kawa/standard/Scheme.java (createReadTable): Handle "#," syntax.

2005-12-22  Per Bothner  <per@bothner.com>

	* kawa/lang/SyntaxPattern.java (translate): Set source position
	on pattern Declarations.

2005-12-11  Per Bothner  <per@bothner.com>

	Remember URL of loaded file, so it can be passed to ArrayClassLoader.
	* kawa/Shell.java (run): Take extra URL argument.
	(runFile): Handle skipLines even if read from stdin.
	* kawa/repl.java (processArgs): Update evalModule call.
	* kawa/lang/Eval.java (evalBody): Likewise.
	* kawa/standard/load.java (loadSource): New URL parameter.
	(apply): Get URL and pass it to loadSource.

	* kawa/lang/Lambda.java (rewriteBody): Temporarily set curLambda.
	* kawa/standard/object.java (rewriteInit): Set line of initializing
	SetExp to that of Declaration - rather than current Translator position.

2005-12-10  Per Bothner  <per@bothner.com>

	* kawa/standard/load.java (apply): Add extra argument.
	Skip that many lines.
	(apply2): Update to match.
	* kawa/Shell.java (runFile): Also add extra skipLines argument.
	* kawa/repl.java: Update runFile callers.
	(processArgs): Handle new --script and --scriptN options.

	* kawa/standard/load.java (apply): Remove some hacks to map "class name"
	to filename, and special .scm handling.
	In return, we now allow general URLs in addition to filename.
	(loadSource(String,Environment)): Remove static method.

2005-12-05  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (createReadTable): Use '\\' for
	postfixLookupOperator instead of '`'.

2005-12-04  Per Bothner  <per@bothner.com>
