@@ -1,7 +1,10 @@
 2005-12-31  Per Bothner  <per@bothner.com>
 
-	* Quote.java: Un-tab-ify conditional code.
-	* SyntaxTemplate.java: Likewise.
+	* kawa/standard/Scheme.java (unitScheme): Declare URI function.
+	(createReadTable): Declare URI as a reader constructor.
+
+	* kawa/lang/Quote.java: Un-tab-ify conditional code.
+	* kawa/lang/SyntaxTemplate.java: Likewise.
 
 2005-12-30  Per Bothner  <per@bothner.com>
 
